# surveyCV

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  surveyCV_cross_validation_explained.md
.github/workflows/: docs.yml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  methodology.rst  quickstart.rst  references.rst
src/surveycv/: __init__.py  _validation.py  bootstrap.py  folds.py  metrics.py  scoring.py  split.py  splitter.py
tasks/: todo.md
tests/: test_bootstrap.py  test_folds.py  test_metrics.py  test_scoring.py  test_split.py  test_splitter.py
