[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surveycv"
version = "0.2.0"
description = "Design-aware cross-validation and train/test splitting for complex sample surveys (PSU/stratum aware)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JD" }]
keywords = [
    "cross-validation",
    "survey",
    "complex-survey",
    "stratified-sampling",
    "cluster-sampling",
    "scikit-learn",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pandas>=1.3"]
docs = ["sphinx>=7.0", "sphinx-rtd-theme>=2.0"]

[project.urls]
Homepage = "https://github.com/mcsilver-aihub/surveyCV"
Documentation = "https://mcsilver-aihub.github.io/surveyCV/"
Repository = "https://github.com/mcsilver-aihub/surveyCV"
Issues = "https://github.com/mcsilver-aihub/surveyCV/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
